add tabulate install in CI

--- a/misc/dn_readme.ipynb
+++ b/misc/dn_readme.ipynb
@@ -14,6 +14,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c32ac46",
+   "metadata": {},
+   "source": [
+    "## Optional Dependencies\n",
+    "\n",
+    "This package supports converting various file formats to Markdown, with each format requiring specific dependencies:\n",
+    "\n",
+    "\n",
+    "    Format      Required Package(s)\n",
+    "    ----------- -----------------\n",
+    "    PDF         pypdf\n",
+    "    Word        mammoth\n",
+    "    Excel       pandas, openpyxl, tabulate\n",
+    "    PowerPoint  python-pptx\n",
+    "    HTML        html2text\n",
+    "    Notebooks   nbconvert, nbformat\n",
+    "\n",
+    "**Installation Options**\n",
+    "\n",
+    "You can install these dependencies after the fact, if and when package complains it needs some specific resource. \n",
+    "\n",
+    "You can also install these when installing `dn`, like so:\n",
+    "\n",
+    "```bash\n",
+    "    # Install with minimal dependencies\n",
+    "    pip install dn\n",
+    "\n",
+    "    # Install with support for specific formats\n",
+    "    pip install dn[pdf]               # PDF conversion support\n",
+    "    pip install dn[word]              # Word document support\n",
+    "    pip install dn[excel]             # Excel support\n",
+    "    pip install dn[powerpoint]        # PowerPoint support\n",
+    "    pip install dn[html]              # HTML conversion\n",
+    "    pip install dn[notebook]          # Jupyter Notebook support\n",
+    "\n",
+    "    # Install multiple format support\n",
+    "    pip install dn[pdf,word,excel]    # Multiple formats\n",
+    "\n",
+    "    # Install all optional dependencies\n",
+    "    pip install dn[all]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b240eb1a",
    "metadata": {},
    "source": [
